force-app/main/default/objects/Document_Set_Code__c/Document_Set_Code__c.object-meta.xml
<CustomObject>
    <label>Document Set Code</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Set Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>