force-app/main/default/objects/Document_Set_Code__c/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <label>Applicable For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Primary Applicant</fullName>
            </value>
            <value>
                <fullName>Co-Applicant</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>