force-app/main/default/objects/Document_Set_Code__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <isActive>false</isActive>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>Plot For Mortgage Asset</fullName>
                <isActive>false</isActive>
                <label>Plot For Mortgage Asset</label>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>