force-app/main/default/objects/Document_Set_Code__c/fields/Document_Master__c.field-meta.xml
<CustomField>
    <fullName>Document_Master__c</fullName>
    <label>Document Code</label>
    <referenceTo>Document_Master__c</referenceTo>
    <relationshipLabel>Document Set Codes</relationshipLabel>
    <relationshipName>Document_Set_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>