force-app/main/default/objects/Document_Set_Code__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Income Proof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>