force-app/main/default/objects/Document_Set_Code__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>FIV - B</fullName>
            </value>
            <value>
                <fullName>FIV - C</fullName>
            </value>
            <value>
                <fullName>Online EC</fullName>
            </value>
            <value>
                <fullName>Lead Detail</fullName>
            </value>
            <value>
                <fullName>In Principle Sanction</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
            <value>
                <fullName>Final Sanction</fullName>
            </value>
            <value>
                <fullName>Post Approval</fullName>
            </value>
            <value>
                <fullName>MOD Registration</fullName>
            </value>
            <value>
                <fullName>Agreement Execution</fullName>
            </value>
            <value>
                <fullName>Dispatch Pending</fullName>
            </value>
            <value>
                <fullName>Document Receipt</fullName>
            </value>
            <value>
                <fullName>Disbursal Maker</fullName>
            </value>
            <value>
                <fullName>Disbursal Author</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>Legal Opinion</fullName>
            </value>
            <value>
                <fullName>Legal Approval</fullName>
            </value>
            <value>
                <fullName>Post Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>