force-app/main/default/objects/Document_Set_Code__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Row house</fullName>
            </value>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Mill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>