force-app/main/default/objects/Document_Set_Code__c/validationRules/Is_Type_Selected_Applicant.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Type_Selected_Applicant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;Applicant&apos;), OR(ISPICKVAL(Applicable_For__c, &apos;&apos;),ISPICKVAL( Income_Type__c , &apos;&apos;)))</errorConditionFormula>
    <errorMessage>Fill Applicable And Income Type.</errorMessage>
</ValidationRule>