force-app/main/default/objects/Document_Set_Code__c/validationRules/Is_Type_Selected_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Type_Selected_Application</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Type__c , &apos;Application&apos;),
   OR(
      NOT(ISPICKVAL( Applicable_For__c , &apos;&apos;) ),
      NOT(ISPICKVAL( Income_Type__c , &apos;&apos;) ),
      NOT(ISPICKVAL( Asset_Type__c , &apos;&apos;) ),
      NOT(ISPICKVAL( Sub_Type__c , &apos;&apos;) )
   ) 
)</errorConditionFormula>
    <errorMessage>Applicable For, Income Type, Asset Type and Sub Type Should be blank</errorMessage>
</ValidationRule>