force-app/main/default/objects/Document_Set_Code__c/validationRules/Is_Type_Selected_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Type_Selected_Asset</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c, &apos;Asset&apos;),
OR(
ISPICKVAL(Asset_Type__c, &apos;&apos;),
ISPICKVAL(Sub_Type__c, &apos;&apos;),
ISPICKVAL( Applicable_For__c , &apos;&apos;),
ISPICKVAL( Income_Type__c , &apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Fill Applicable for, Income Type, Asset Type And Sub Type.</errorMessage>
</ValidationRule>